--- a/portfolio.html
+++ b/portfolio.html
@@ -48,152 +48,152 @@ js:
 <h2>(By no means a professional photographer - but I'm working towards it.)</h2>
 <h3 align="center">India | Jan '25
   <p>
-    <img width="800" align="center" alt="taj" src="{{ site.url }}/images/taj.png"> 
+    <img width="100%" align="center" alt="taj" src="{{ site.url }}/images/taj.png"> 
     <p>Taj Mahal, Agra</p>
   </p>
   <p>
-    <img width="800" align="center" alt="aleppey boat" src="{{ site.url }}/images/aleppey.png"> 
+    <img width="100%" align="center" alt="aleppey boat" src="{{ site.url }}/images/aleppey.png"> 
     <p>Boat ride, Aleppey</p>
   </p>
   <p>
-    <img width="800" align="center" alt="aleppey beach" src="{{ site.url }}/images/aleppeybeach.png"> 
+    <img width="100%" align="center" alt="aleppey beach" src="{{ site.url }}/images/aleppeybeach.png"> 
     <p>Beach, Aleppey</p>
   </p>
   <p>
-    <img width="800" align="center" alt="munaar" src="{{ site.url }}/images/munaar.png"> 
+    <img width="100%" align="center" alt="munaar" src="{{ site.url }}/images/munaar.png"> 
     <p>Tea fields, Munaar</p>
   </p>
   <p>
-    <img width="800" align="center" alt="maniyara" src="{{ site.url }}/images/maniyara.jpg"> 
+    <img width="100%" align="center" alt="maniyara" src="{{ site.url }}/images/maniyara.jpg"> 
     <p>Surat, India</p>
   </p>
 </h3>
 <h3 align="center">Vancouver | Dec '24
   <p>
-    <img width="800" align="center" alt="convention center" src="{{ site.url }}/images/vancouver.png"> 
+    <img width="100%" align="center" alt="convention center" src="{{ site.url }}/images/vancouver.png"> 
     <p>Downtown, Vancouver</p>
   </p>
   <p>
-    <video align="center" width="800" height="600" display="block" margin="auto" loop autoplay muted>
+    <video align="center" width="100%" height="600" display="block" margin="auto" loop autoplay muted>
       <source src="http://sawanp813.github.io/images/vancouver_otter.mp4" type="video/mp4">
     </video>
   <p>
   <p>
-    <img width="800" align="center" alt="aquarium" src="{{ site.url }}/images/walrus.png"> 
+    <img width="100%" align="center" alt="aquarium" src="{{ site.url }}/images/walrus.png"> 
     <p>Aquarium, Vancouver</p>
   </p>
   <p>
-    <img width="800" align="center" alt="overhead" src="{{ site.url }}/images/vancouver.jpg"> 
+    <img width="100%" align="center" alt="overhead" src="{{ site.url }}/images/vancouver.jpg"> 
     <p>Overhead, Vancouver</p>
   </p>
 
 </h3>
 <h3 align="center">Boston | Nov '24
   <p>
-    <img width="800" align="center" alt="Commonwealth Ave" src="{{ site.url }}/images/commave.png"> 
+    <img width="100%" align="center" alt="Commonwealth Ave" src="{{ site.url }}/images/commave.png"> 
     <p>Commonwealth Avenue, Boston</p>
   </p>
 </h3>
 <h3 align="center">Outer Banks | July '24
   <p>
-    <img width="800" align="center" alt="Outer Banks" src="{{ site.url }}/images/outerbanks.png"> 
+    <img width="100%" align="center" alt="Outer Banks" src="{{ site.url }}/images/outerbanks.png"> 
     <p>Outer Banks, North Carolina</p>
   </p>
 </h3>
 <h3 align="center">Niagara Falls | Apr '24
   <p>
-    <img width="800" align="center" alt="Niagara Falls" src="{{ site.url }}/images/niagara.png"> 
+    <img width="100%" align="center" alt="Niagara Falls" src="{{ site.url }}/images/niagara.png"> 
   </p>
 </h3>
 <h3 align="center">California | Mar '24
   <p>
-    <img width="800" align="center" alt="Santa Monica sign" src="{{ site.url }}/images/santamonicasign.png"> 
+    <img width="100%" align="center" alt="Santa Monica sign" src="{{ site.url }}/images/santamonicasign.png"> 
   </p>
   <p>
-    <img width="800" align="center" alt="Santa Monica Pier, 1" src="{{ site.url }}/images/santamonicapier1.png"> 
+    <img width="100%" align="center" alt="Santa Monica Pier, 1" src="{{ site.url }}/images/santamonicapier1.png"> 
   </p>
   <p>
-    <img width="800" align="center" alt="Santa Monica Pier, 2" src="{{ site.url }}/images/santamonicapier2.png"> 
+    <img width="100%" align="center" alt="Santa Monica Pier, 2" src="{{ site.url }}/images/santamonicapier2.png"> 
     <p>Santa Monica, California</p>
   </p>
   <p>
-    <img width="800" align="center" alt="Jaguar" src="{{ site.url }}/images/jag_petersen.png"> 
+    <img width="100%" align="center" alt="Jaguar" src="{{ site.url }}/images/jag_petersen.png"> 
     <p>Petersen Auto Museum, Los Angeles</p>
   </p>
   <p>
-    <img width="800" align="center" alt="broad1" src="{{ site.url }}/images/broad1.png"> 
+    <img width="100%" align="center" alt="broad1" src="{{ site.url }}/images/broad1.png"> 
   </p>
   <p>
-    <img width="800" align="center" alt="broad2" src="{{ site.url }}/images/broad2.png"> 
+    <img width="100%" align="center" alt="broad2" src="{{ site.url }}/images/broad2.png"> 
   </p>
   <p>
-    <img width="800" align="center" alt="broad3" src="{{ site.url }}/images/broad3.png"> 
+    <img width="100%" align="center" alt="broad3" src="{{ site.url }}/images/broad3.png"> 
     <p>The Broad, Los Angeles</p>
   </p>
   <p>
-    <img width="800" align="center" alt="El Pollo Loco" src="{{ site.url }}/images/elpolloloco.png"> 
+    <img width="100%" align="center" alt="El Pollo Loco" src="{{ site.url }}/images/elpolloloco.png"> 
     <p>El Pollo Loco, Los Angeles (see: Rush Hour 2)</p>
   </p>
 </h3>
 <h3 align="center">Chicago | Aug '23
   <p>
-    <img width="800" align="center" alt="Chicago River, 1" src="{{ site.url }}/images/chicago_river1.png"> 
+    <img width="100%" align="center" alt="Chicago River, 1" src="{{ site.url }}/images/chicago_river1.png"> 
   </p>
   <p>
-    <img width="800" align="center" alt="Chicago cityscape" src="{{ site.url }}/images/chicago_scape.png"> 
+    <img width="100%" align="center" alt="Chicago cityscape" src="{{ site.url }}/images/chicago_scape.png"> 
     <p>Downtown, Chicago</p>
   </p>
   <p>
-    <img width="800" align="center" alt="Chicago Ferris Wheel" src="{{ site.url }}/images/chicago_ferris.png"> 
+    <img width="100%" align="center" alt="Chicago Ferris Wheel" src="{{ site.url }}/images/chicago_ferris.png"> 
     <p>Big ferris wheel, Chicago</p>
   </p>
 </h3>
 <h3 align="center">Iceland | Aug '22
   <p>
-    <img width="800" align="center" alt="Reykjavik Cityscape" src="{{ site.url }}/images/scape_iceland.png"> 
+    <img width="100%" align="center" alt="Reykjavik Cityscape" src="{{ site.url }}/images/scape_iceland.png"> 
   </p>
   <p>
-    <img width="800" align="center" alt="Mural" src="{{ site.url }}/images/mural_iceland.png"> 
+    <img width="100%" align="center" alt="Mural" src="{{ site.url }}/images/mural_iceland.png"> 
     <p>Downtown Reykjavik, Iceland</p>
   </p>
   <p>
-    <video align="center" width="800" height="600" display="block" margin="auto" loop autoplay muted>
+    <video align="center" width="100%" height="600" display="block" margin="auto" loop autoplay muted>
       <source src="http://sawanp813.github.io/images/vik.mp4" type="video/mp4">
     </video>
   </p>
   <p>
-    <img width="800" align="center" alt="Vik1" src="{{ site.url }}/images/vik_iceland.png"> 
+    <img width="100%" align="center" alt="Vik1" src="{{ site.url }}/images/vik_iceland.png"> 
   </p>
   <p>
-    <img width="800" align="center" alt="Vik2" src="{{ site.url }}/images/vik_river_iceland.png"> 
+    <img width="100%" align="center" alt="Vik2" src="{{ site.url }}/images/vik_river_iceland.png"> 
     <p>Vik, Iceland</p>
   </p>
   <p>
-    <img width="800" align="center" alt="Thingvellir" src="{{ site.url }}/images/thingvellir2_iceland.png"> 
+    <img width="100%" align="center" alt="Thingvellir" src="{{ site.url }}/images/thingvellir2_iceland.png"> 
     <p>Thingvellir, Iceland</p>
   </p>
   <p>
-    <img width="800" align="center" alt="Sejlandfoss" src="{{ site.url }}/images/sejlandfoss_iceland.png"> 
+    <img width="100%" align="center" alt="Sejlandfoss" src="{{ site.url }}/images/sejlandfoss_iceland.png"> 
     <p>Sejlandfoss, Iceland</p>
   </p>
   <p>
-    <img width="800" align="center" alt="Grindavik basin" src="{{ site.url }}/images/basin_iceleand.png"> 
+    <img width="100%" align="center" alt="Grindavik basin" src="{{ site.url }}/images/basin_iceleand.png"> 
   </p>
   <p>
-    <img width="800" align="center" alt="Grindavik volcano" src="{{ site.url }}/images/grindavik_iceland.png"> 
+    <img width="100%" align="center" alt="Grindavik volcano" src="{{ site.url }}/images/grindavik_iceland.png"> 
     <p>Grindavik, Iceland</p>
   </p>
   <p>
-    <video align="center" width="800" height="600" display="block" margin="auto" loop autoplay muted>
+    <video align="center" width="100%" height="600" display="block" margin="auto" loop autoplay muted>
       <source src="http://sawanp813.github.io/images/iceland_waterfall.mp4" type="video/mp4">
     </video>
   </p>
   <p>
-    <img width="800" align="center" alt="Blaskogabygga" src="{{ site.url }}/images/blaskogabygga_iceland.png"> 
+    <img width="100%" align="center" alt="Blaskogabygga" src="{{ site.url }}/images/blaskogabygga_iceland.png"> 
     <p>Blaskogabygga, Iceland</p>
   </p>
   <p>
-    <img width="800" align="center" alt="Glacier deposit" src="{{ site.url }}/images/glacial_iceland.png"> 
+    <img width="100%" align="center" alt="Glacier deposit" src="{{ site.url }}/images/glacial_iceland.png"> 
     <p>Glacier basin, Iceland</p>
   </p>
   <p>
@@ -201,7 +201,7 @@ js:
     <p>Black Sand Beach, Iceland</p>
   </p>
   <p>
-    <video align="center" width="800" height="600" display="block" margin="auto" loop autoplay muted>
+    <video align="center" width="100%" height="600" display="block" margin="auto" loop autoplay muted>
       <source src="http://sawanp813.github.io/images/IMG_8219.mp4" type="video/mp4">
     </video>
     <p>Countryside, Iceland</p>
@@ -209,59 +209,59 @@ js:
 </h3>
 <h3 align="center">Manhattan | Mar '22
   <p>
-    <img width="800" align="center" alt="Brooklyn Bridge" src="{{ site.url }}/images/bklyn_bridge.png"> 
+    <img width="100%" align="center" alt="Brooklyn Bridge" src="{{ site.url }}/images/bklyn_bridge.png"> 
     <p>Brooklyn Bridge, New York</p>
   </p>
   <p>
-    <img width="800" align="center" alt="Cityscape" src="{{ site.url }}/images/ny_cityscape.png"> 
+    <img width="100%" align="center" alt="Cityscape" src="{{ site.url }}/images/ny_cityscape.png"> 
     <p>Cityscape, New York</p>
   </p>
 </h3>
 <h3 align="center">Hawaii | June '21
   <p>
-    <video align="center" width="800" height="600" display="block" margin="auto" loop autoplay muted>
+    <video align="center" width="100%" height="600" display="block" margin="auto" loop autoplay muted>
       <source src="http://sawanp813.github.io/images/IMG_5275.mp4" type="video/mp4">
     </video>
     <p>Shipwreck, Hawaii</p>
   </p>
   <p>
-    <img width="800" align="center" alt="Ho'okipa Beach" src="{{ site.url }}/images/ho'okipa_beach_hawaii.png"> 
+    <img width="100%" align="center" alt="Ho'okipa Beach" src="{{ site.url }}/images/ho'okipa_beach_hawaii.png"> 
     <p>Ho'okipa Beach, Hawaii</p>
   </p>
   <p>
-    <img width="800" align="center" alt="Screen Shot 2023-07-16 at 6.26.01 PM" src="{{ site.url }}/images/sunset_hawaii.png"> 
+    <img width="100%" align="center" alt="Screen Shot 2023-07-16 at 6.26.01 PM" src="{{ site.url }}/images/sunset_hawaii.png"> 
   </p>
   <p>
-    <img width="800" align="center" alt="Hawaii road" src="{{ site.url }}/images/hawaii_road.png"> 
+    <img width="100%" align="center" alt="Hawaii road" src="{{ site.url }}/images/hawaii_road.png"> 
   </p>
   <p>
-    <img width="800" align="center" alt="Screen Shot 2023-07-16 at 6.26.01 PM" src="{{ site.url }}/images/sunset2_hawaii.png"> 
+    <img width="100%" align="center" alt="Screen Shot 2023-07-16 at 6.26.01 PM" src="{{ site.url }}/images/sunset2_hawaii.png"> 
     <p>Roads, Hawaii</p>
   </p>
 </h3>
 <h3 align="center">India | Jan '21
   <p>
-    <img width="800" align="center" alt="Vanesa, India" src="{{ site.url }}/images/farm.png"> 
+    <img width="100%" align="center" alt="Vanesa, India" src="{{ site.url }}/images/farm.png"> 
     <p>Vanesa, India</p>
   </p>
   <p>
-    <img width="800" align="center" alt="Statue of Unity" src="{{ site.url }}/images/statue_of_unity.png"> 
+    <img width="100%" align="center" alt="Statue of Unity" src="{{ site.url }}/images/statue_of_unity.png"> 
     <p>Statue of Unity, India</p>
   </p>
 </h3>
 <h3 align="center">United Arab Emirates | Dec '20
   <p>
-    <img width="800" align="center" alt="Dubai Mall" src="{{ site.url }}/images/dubaimall.png"> 
+    <img width="100%" align="center" alt="Dubai Mall" src="{{ site.url }}/images/dubaimall.png"> 
   </p>
   <p>
-    <img width="800" align="center" alt="Dubai view" src="{{ site.url }}/images/Sharjah_dubai.png"> 
+    <img width="100%" align="center" alt="Dubai view" src="{{ site.url }}/images/Sharjah_dubai.png"> 
   </p>
   <p>
-    <img width="800" align="center" alt="Sharjah" src="{{ site.url }}/images/dubai_scape.png"> 
+    <img width="100%" align="center" alt="Sharjah" src="{{ site.url }}/images/dubai_scape.png"> 
     <p>Dubai, United Arab Emirates</p>
   </p>
   <p>
-    <img width="800" align="center" alt="Sheikh Zayed Mosque" src="{{ site.url }}/images/sheikhzayedmosque.png"> 
+    <img width="100%" align="center" alt="Sheikh Zayed Mosque" src="{{ site.url }}/images/sheikhzayedmosque.png"> 
     <p>Sheikh Zayed Mosque, Abu Dhabi, United Arab Emirates</p>
   </p>
 </h3>
